# openrasp

./: .travis.yml
agent/java/engine/: pom.xml
agent/java/engine/src/main/java/com/baidu/openrasp/: EngineBoot.java  HookHandler.java
agent/java/engine/src/main/java/com/baidu/openrasp/cloud/: KeepAlive.java
agent/java/engine/src/main/java/com/baidu/openrasp/config/: Config.java
agent/java/engine/src/main/java/com/baidu/openrasp/hook/: DeserializationHook.java  JstlImportHook.java  OgnlHook.java  ProcessBuilderHook.java  ReflectionHook.java  SocketHook.java  WebDAVCopyResourceHook.java  XXEHook.java
agent/java/engine/src/main/java/com/baidu/openrasp/hook/file/: DiskFileItemHook.java  FileHook.java  FileInputStreamHook.java  FileOutputStreamHook.java  FileRenameHook.java
agent/java/engine/src/main/java/com/baidu/openrasp/hook/sql/: SQLStatementHook.java
agent/java/engine/src/main/java/com/baidu/openrasp/hook/ssrf/: AbstractSSRFHook.java
agent/java/engine/src/main/java/com/baidu/openrasp/request/: AbstractRequest.java  HttpServletRequest.java
agent/java/engine/src/main/native/: CMakeLists.txt  com_baidu_openrasp_plugin_v8_V8.cc  com_baidu_openrasp_plugin_v8_V8.h  context.cc  generate-jni-header.sh  header.h  utils.cc
agent/java/engine/src/main/native/openrasp_v8/: CMakeLists.txt  openrasp_v8_bundle.h  openrasp_v8_isolate.cc  openrasp_v8_snapshot.cc
agent/java/integration-test/: build-v8.sh
agent/php/: config.w32
agent/php7/utils/: regex.cc
travis/java/: before_script.sh
travis/php7/: script.sh
(+10 files in other folders)
